<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Are We There Yet chenqiju</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="provider">Provider:</string>
    <string name="textProvider">Dummy</string>
    <string name="latitude">Latitude:</string>
    <string name="textLatitude">Dummy</string>
    <string name="longitude">Longitude:</string>
    <string name="textLongitude">Dummy</string>
    <string name="textTo">Dummy</string>
    <string name="textDistance">Dummy</string>
    <string name="newLocation">New Location</string>
    <string name="editLocation"></string>
    <string name="location">Location</string>
    <string name="resetButton">New</string>
    <string name="eb1230">1230 Engineering</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    
</resources>
