<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/providerView"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/providerView"
        android:text="@string/textProvider"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/providerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:text="@string/provider"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/latitudeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/providerView"
        android:layout_below="@+id/providerView"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textLatitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/latitudeView"
        android:layout_alignLeft="@+id/textProvider"
        android:text="@string/textLatitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/latitudeView"
        android:layout_below="@+id/latitudeView"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textLongitude"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Longitude"
        android:layout_alignLeft="@+id/textLatitude"
        android:text="@string/textLongitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Longitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/textTo"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTo"
        android:layout_centerHorizontal="true"
        android:text="@string/textDistance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/newLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDistance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/newLocation"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPostalAddress"
        android:text="@string/editLocation" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editLocation"
        android:layout_below="@+id/editLocation"
        android:onClick="onNew"
        android:text="@string/resetButton" />

</RelativeLayout>